Projects section upate

--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@
 
             <nav class="projects__menu">
               <ul>
+                <li><a id="projectsgis-button"></a> </li>
                 <li><a id="projectsWeb-button"></a> </li>
                 <li><a id="research-button"></a> </li>
 
@@ -643,11 +644,97 @@
 
 
 
-              <!--Hangman-->
+
+              <div class="gisGallery">
+
+                <div class="projectsItem">
+                     <!--volcanoes-->
+                  <div class="volcanoesmapImg">
+                    <div class="box">
+                      <h3 class="volcanoesmap"></h3>
+                    </div>
+
+                  </div>
+
+
+
+                  <div class="projectsItem__iconsContainer">
+
+                    <div class="projectsItem__info">
+                      <h3 class="volcanoesmap"></h3>
+                      <p class="projectsItem__description" id="volcanoesmap-description"></p>
+                    </div>
+
+                    <ul class="usedTech">
+                      <li class="projectsItem__iconItem">
+                        <i class="fa-brands fa-html5"></i>
+                        JavaScript
+                      </li>
+
+                      <li class="projectsItem__iconItem">
+                        <i class="fa-brands fa-js-square"></i>
+
+                        Leaflet
+                      </li>
+
+                      <li class="projectsItem__iconItem">
+                        <i class="fa-brands fa-css3"></i>
+
+                        CSS3
+                      </li>
+
+                    </ul>
+
+
+
+
+
+
+                    <div class="projectsItem__buttonContainer">
+
+                      <ul>
+                        <li>
+                          <a href="https://worldvolcanoesmap.netlify.app/" class="launch">
+                            <i class="fa-solid fa-rocket"></i>
+                            <p class="probar"></p>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/dhlarrotar/world_volcanoes_map" class="more">
+                            <i class="fa-brands fa-github"></i>
+                            <p class="ver-mas"></p>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+
+                
+
+
+
+
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+           
 
               <div class="projectsGallery">
 
                 <div class="projectsItem">
+                     <!--volcanoes-->
                   <div class="volcanoesmapImg">
                     <div class="box">
                       <h3 class="volcanoesmap"></h3>
