--- a/index.html
+++ b/index.html
@@ -1301,12 +1301,12 @@
     </footer>
 
 
-    <div class="" container reveal fade-bottom">
+    <div class=" container reveal fade-bottom">
       <div class="loader">
         <div class="spinner"></div>
       </div>
     </div>
-    <!-- <script src="js/apod-request.js"></script> -->
+  <script src="js/apod-request.js"></script> 
 
     <script src="js/loader.js"></script>
     <script src="js/data.js"></script>
