--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@
 
         </a>
 
-        <a href="https://www.instagram.com/dlar_geo/" class="icon-div">
+        <a href="https://www.instagram.com/dlar.geo/" class="icon-div">
           <i class="fa-brands fa-instagram"></i>
 
         </a>
