--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   </li>
 
 
-                  <li class="socialItem"> <a href="https://www.instagram.com/dlar.geo/">
+                  <li class="socialItem"> <a href="https://www.instagram.com/dlarrotar/">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
                   </a>
@@ -1295,7 +1295,7 @@
 
         </a>
 
-        <a href="https://www.instagram.com/dlar.geo/" class="icon-div">
+        <a href="https://www.instagram.com/dlarrotar/" class="icon-div">
           <i class="fa-brands fa-instagram"></i>
 
         </a>
