general content update

--- a/index.html
+++ b/index.html
@@ -274,9 +274,7 @@
                   </li>
 
 
-                  <li class="socialItem"> <a href="https://www.instagram.com/dlarrotar/">
-                    <i class="fa-brands fa-instagram"></i>
-                    <p>Instagram</p>
+                 
                   </a>
                 </li>
 
@@ -1146,6 +1144,47 @@
 
 
               <div class="researchGallery">
+
+
+
+
+
+
+
+
+
+
+                <div class="projectsItem">
+
+
+
+                  <div class="researchItem__info">
+                    <div class="tag-container">
+                      <p class="research-tag1"></p>
+                    </div>
+                    <p class="research-description" id="magma-authors">
+                    Altenberger, U.; Concha-Perdomo, A.; Larrota-Rincón, D.; Günter, C.; Lorenz, M.
+                    </p>
+                    <p class="research-title" id="magma-title"></p>
+                    <p class="research-info" id="magma-info">Andean Geology Vol.51 N.3 (2024)</p>
+
+                    <div class="projectsItem__buttonContainer">
+                      <a href="http://www.andeangeology.cl/index.php/revista1/article/view/V51n3-3691" class="launch">
+                        <i class="fa-solid fa-book-open-reader"></i>
+                        <p class="read"></p>
+                      </a>
+
+
+                    </div>
+                  </div>
+
+                </div>
+
+
+
+
+
+
                 <div class="projectsItem">
 
 
@@ -1170,11 +1209,8 @@
                     </div>
                   </div>
 
-
-
-
-
                 </div>
+
 
 
 
@@ -1193,10 +1229,6 @@
 
                     </div>
                   </div>
-
-
-
-
 
                 </div>
 
@@ -1295,12 +1327,10 @@
 
         </a>
 
-        <a href="https://www.instagram.com/dlarrotar/" class="icon-div">
-          <i class="fa-brands fa-instagram"></i>
-
-        </a>
+        <a href="https://www.researchgate.net/profile/Daniel-Larrota-Rincon" class="icon-div">
+          <i class="fa-brands fa-researchgate"></i>
       </div>
-      <p class="copyright">&copy Daniel Larrota R · 2024</p>
+      <p class="copyright">&copy Daniel Larrota R · 2025</p>
     </footer>
 
 
